# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /api/v1
 definitions:
+  user.AttachmentDTO:
+    properties:
+      file_name:
+        example: document.jpg
+        type: string
+      file_path:
+        example: /assets/images/20240115_a1b2c3d4.jpg
+        type: string
+    required:
+    - file_name
+    - file_path
+    type: object
   user.DepartmentInfo:
     properties:
       address:
@@ -21,7 +33,7 @@ definitions:
         example: "001234567890"
         type: string
       password:
-        example: password123
+        example: Aa@123456
         type: string
     required:
     - citizen_id
@@ -96,7 +108,7 @@ definitions:
         example: Nguyễn Văn A
         type: string
       password:
-        example: Password@123
+        example: Aa@123456
         type: string
       phone:
         example: "0901234567"
@@ -180,6 +192,28 @@ definitions:
       total_pages:
         example: 5
         type: integer
+    type: object
+  user.SubmitAppRequest:
+    properties:
+      attachments:
+        items:
+          $ref: '#/definitions/user.AttachmentDTO'
+        type: array
+      service_id:
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
+    required:
+    - attachments
+    - service_id
+    type: object
+  user.SubmitAppResponse:
+    properties:
+      code:
+        example: HS-20240115-a1b2c3d4
+        type: string
+      id:
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
     type: object
   user.UpdateProfileRequest:
     properties:
@@ -282,6 +316,47 @@ info:
   title: Public Service Management API
   version: "1.0"
 paths:
+  /applications:
+    post:
+      consumes:
+      - application/json
+      description: Công dân nộp hồ sơ dịch vụ công
+      parameters:
+      - description: Thông tin hồ sơ
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.SubmitAppRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.APIResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/user.SubmitAppResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ValidationErrors'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.APIResponse'
+      security:
+      - BearerAuth: []
+      summary: Nộp hồ sơ
+      tags:
+      - Applications
   /auth/login:
     post:
       consumes:
